alignment fixes for crew page

--- a/lesson-files/21/01-start/index.css
+++ b/lesson-files/21/01-start/index.css
@@ -745,6 +745,8 @@ body {
 
 
     .grid-container--crew {
+        justify-items: start;
+        grid-template-columns: minmax(1rem, 1fr) minmax(0, 40rem) minmax(0, 20rem) minmax(1rem, 1fr);
         grid-template-areas:
             '. title   image .'
             '. content image .'
@@ -753,11 +755,10 @@ body {
     }
 
     .grid-container--crew > .dot-indicators {
-        justify-self: start;
         padding-block-end: 2rem;
     }
 
     .grid-container--crew > picture {
-        align-self: end
+        align-self: center;
     }
 }
